# tconfig

./: .gitignore  CMakeLists.txt  Makefile  README.md  install_sh
Testing/: str_basic.config
src/: Makefile  bool.test.cpp  char.test.cpp  i32.test.cpp  str.test.cpp  tconfig.cpp  tconfig.hh  test.cpp
